# CPP-ML-Toolkit

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
include/: KNN.hpp  LinearRegression.hpp  LogisticRegression.hpp
src/: KNN.cpp  LinearRegression.cpp  LogisticRegression.cpp  bindings.cpp
test/: KNN.py  LinearRegression.py  LogisticRegression.py
